# zip-dir-analyzer

./: .gitignore  Cargo.toml  LICENSE  ReadMe.md  find zip with manifest that contains tag.md
src/: jq_processor.rs  main.rs  regex_processor.rs  shared_iterator.rs
