[package]
name = "zip-dir-analyzer"
version = "2.0.3"
edition = "2021"

[dependencies]
zip = "4.1.0"
regex = "1.11.1"
clap = { version = "4.5.40", features = ["derive"] }
anyhow = "1.0.98"
threadpool="1.8.1"
indicatif="0.17.11"
num_cpus="1.17.0"

jaq-core = "2.2.0"
jaq-std = "2.1.1"
jaq-json = { version = "1.1.2", features = ["serde_json"] }
jaq-syn = "1.6.0"

serde_json="1.0.140"
