[package]
name = "zip-dir-analyzer"
version = "3.0.1"
edition = "2021"

license = "MIT"
description = "Tool to analyze large directories of zip files."
homepage = "https://github.com/battjt/zip-dir-analyzer"
repository = "https://github.com/battjt/zip-dir-analyzer"
readme = "README.md"
keywords = ["zip","search","pattern","grep"]


[dependencies]
zip = "6.0.0"
regex = "1.11.1"
clap = { version = "4.5.40", features = ["derive"] }
anyhow = "1.0.98"
threadpool="1.8.1"
indicatif="0.18.3"
num_cpus="1.17.0"

jaq-core = "2.2.0"
jaq-std = "2.1.1"
jaq-json = { version = "1.1.2", features = ["serde_json"] }
jaq-syn = "1.6.0"

serde_json="1.0.140"
